[package]
name = "torrent_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = "^0.3"
lava_torrent = "0.7.0"
bt_bencode = "0.6.1"
serde = "1.0.137"
serde_derive = "1.0.137"
rand = "0.8.4"
sha1 = "0.6.0"
url = "2.2.2"
urlencoding = "2.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
hex = "0.4.3"
